<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UmpireBuddy</string>
    <string name="hello_world">Version  1.1 Umpire Buddy MHY!</string>
    <string name="action_settings">Settings</string>
    <string name="Strike_button"> STRIKE </string>
    <string name="Ball_button"> BALL </string>
    <string name="ballcount"> Balls :  </string>
    <string name="strikecount"> Strikes : </string>
    <string name="title_activity_about">About</string>
    <string name="ABOUT">Version 1.1 of Umpire Buddy by Matt Yale</string>


</resources>
